# charp-test

1/: CMakeLists.txt  orig.txt
1/latest/: CMakeLists.txt
engine/: Wind.Web.csproj
engine/Src/Logger/: LoggerManager.cs
engine/wwwroot/: main.js  mymath.wasm
native/include/: window.hpp
native/src/: main.cpp  window.cpp
test/: mymath.cpp
test/c/: mymath.wasm
